--- a/web/workspace/html/ex04_list.html
+++ b/web/workspace/html/ex04_list.html
@@ -27,7 +27,7 @@
             <li>돈가스</li>
         </ul>
 
-        <h1>순서가 있는 태그 : ul</h1>
+        <h1>순서가 있는 태그 : ol</h1>
         <!--
         순서가 있는 목록 : ol (ordered list)
         글머리의 종류 : 
