--- a/web/workspace/html/test/test02/test06.html
+++ b/web/workspace/html/test/test02/test06.html
@@ -123,7 +123,7 @@
     
             <button type="submit" value="submit">회원가입</button>
             <button type="reset" value="reset">다시입력</button>
-            <button onclick="history.go(-1);">이전으로</button
+            <button onclick="history.go(-1);">이전으로</button>
         </form>
     </body>
 </html>
