--- a/web/workspace/html/css/ex07_class.t.html
+++ b/web/workspace/html/css/ex07_class.t.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>class.t</title>
     </head>
     <body>
         <!-- class 속성의 값은 하나 이상의 값이 가능함
