--- a/web/workspace/html/test/test03/test02.html
+++ b/web/workspace/html/test/test03/test02.html
@@ -25,8 +25,8 @@
             .main_section article p{font-size: 14px;}
             .main_section article .img{display: block; width: 100%; height: 30px; background-color: #999;}
 
-            .left_section{width: 70%; border: 1px solid #999; padding: 5px; box-sizing: border-box; background-color: #eee;}   
-            .right_section{width: 30%; border: 1px solid #999; padding: 5px; box-sizing: border-box; background-color: #eee;}
+            .left_section{flex: 3; border: 1px solid #999; padding: 5px; box-sizing: border-box; background-color: #eee;}   
+            .right_section{flex: 1; border: 1px solid #999; padding: 5px; box-sizing: border-box; background-color: #eee;}
             
             footer{width: 100%; height: 100px; display: flex; justify-content: center; align-items: center; background-color: #fff; margin-top: 5px;}
         </style>
