--- a/web/workspace/javascript/test/test03/test1.html
+++ b/web/workspace/javascript/test/test03/test1.html
@@ -33,18 +33,26 @@
 	</pre>
 	<script>
 		function calculator(val){
-			let num1 = document.getElementById("num1").value;
-			let num2 = document.getElementById("num2").value;
+			let num1 = parseFloat(document.getElementById("num1").value);
+			let num2 = parseFloat(document.getElementById("num2").value);
+			let result;
 
-			let str = num1 + val + num2;
-			let result =  document.getElementById("result").innerHTML = eval(str);
-		
-			switch(true){
-				case val == "+" : result; break;
-				case val == "-" : result; break;
-				case val == "/" : result; break;
-				case val == "%" : result; break;
+			// 숫자가 아닌 값을 받을때
+			if(isNaN(num1) || isNaN(num2)){
+				document.getElementById("result").innerHTML = "숫자만 입력해주세요";
+				return;
 			}
+
+			// 계산실행
+			switch(val){
+				case "+" : result = num1 + num2; break;
+				case "-" : result = num1 - num2; break;
+				case "/" : result = num2 != 0 ? num1 / num2 : "0으로 나눌수 없습니다."; break;
+				case "%" : result = num1 % num2; break;
+				default  : result = num1 * num2; 
+			}
+
+			document.getElementById("result").innerHTML = result;
 		}
 	</script>
    	
