--- a/web/workspace/javascript/test/test03/test4.html
+++ b/web/workspace/javascript/test/test03/test4.html
@@ -1,25 +1,89 @@
 <!DOCTYPE html>
-<!-- /webapp/test3/test1.html -->
-<html><head>
-<meta charset="UTF-8">
-<title>달력 출력하기</title>
-<style type="text/css">
- .mon { width:100%; border-collapse: collapse;}
- th.mon,td.mon {border : 3px solid #bcbcbc; 
-        text-align: center; padding: 8px;}
- th.mon {background-color: #e2e2e2; color:#111111;}
- td.mon {background-color: #f2f2f2;}
- caption {color:#111111; font-size: 20px; 
-          background-color: #ffffff;}
- .text-red { color : red;}
- .text-blue { color : blue;} 
- </style>
-</head><body>
-<select id="y">
-   <option>2020</option><option>2021</option><option>2022</option>
-   <option">2023</option><option>2024</option>
-   <option selected="selected">2025</option><option>2026</option>
-</select>
-<input type="button" value="달력보기" onclick="show_cal()">
-<br><span id="cal"></span>
-</body></html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>달력</title>
+    <style>
+        .calendar-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            margin-bottom: 30px;
+        }
+        table { width:calc(100 / 4 -10px); border-collapse: collapse;}
+        th,td {border : 3px solid #bcbcbc; text-align: center; padding: 8px;}
+        th {background-color: #e2e2e2; color:#111111;}
+        td {background-color: #f2f2f2;}
+        .sunday { color: red; }
+        .saturday { color: blue; }
+        .row-break {flex-basis: 100%; height: 20px;}
+    </style>
+</head>
+<body>
+
+    <select id="y">
+        <option>2020</option>
+        <option>2021</option>
+        <option>2022</option>
+        <option>2023</option>
+        <option>2024</option>
+        <option selected="selected">2025</option>
+        <option>2026</option>
+    </select>
+
+    <input type="button" value="달력보기" onclick="show_cal()"><br><br>
+    <div id="cal"></div>
+
+    <script>
+        function show_cal() {
+            const year = document.getElementById("y").value;
+            let calHtml = '<div class="calendar-container">';
+
+            for (let month = 1; month <= 12; month++) {
+                calHtml += generateCalendar(year, month);
+
+                // 4, 8월 뒤에는 줄 바꿈을 위한 div 추가
+                if (month % 4 === 0 && month !== 12) {
+                    calHtml += '<div class="row-break"></div>';
+                }
+            }
+
+            calHtml += '</div>';
+            document.getElementById("cal").innerHTML = calHtml;
+        }
+
+        function generateCalendar(year, month) {
+            const firstDay = new Date(year, month - 1, 1).getDay();
+            const lastDate = new Date(year, month, 0).getDate();
+            const dateNames = ['일', '월', '화', '수', '목', '금', '토'];
+
+            let cal = `<table>
+                        <caption><strong>${year}년 ${month}월</strong></caption>
+                        <tr>${dateNames.map((day, i) => `<th class="${getDayClass(i)}">${day}</th>`).join('')}</tr><tr>`;
+
+            for (let i = 0; i < firstDay; i++) {
+                cal += `<td></td>`;
+            }
+
+            for (let day = 1; day <= lastDate; day++) {
+                const currentDay = (firstDay + day - 1) % 7;
+                cal += `<td class="${getDayClass(currentDay)}">${day}</td>`;
+
+                if (currentDay === 6) cal += `</tr><tr>`;
+            }
+
+            cal += `</tr></table>`;
+            return cal;
+        }
+
+        function getDayClass(day) {
+            return day === 0 ? 'sunday' : day === 6 ? 'saturday' : '';
+        }
+
+        window.onload = show_cal;
+    </script>
+
+</body>
+</html>
