--- a/web/workspace/javascript/test/test04/test6.html
+++ b/web/workspace/javascript/test/test04/test6.html
@@ -30,6 +30,32 @@
 
 	<button onclick="insertMember();">입력</button>
 	<button onclick="printMember();">출력</button>
-	
+	<script>
+		let member= {};
+
+		function insertMember(){
+			member.name = prompt("이름 입력", "홍길동");
+			member.age = prompt("나이 입력", "29") + "세";
+			member.add = prompt("주소 입력", "서울시");
+			if(member.name == null || member.age == null || member.add == null){
+				alert("다시 입력 부탁드립니다.");
+				return;
+			}
+			return member;
+		}
+
+		function printMember(){
+			if(member.name == null || member.age == null || member.add == null){
+				alert("입력을 먼저 부탁드립니다.");
+				return;
+			}
+		
+			const labels = { name: "이름", age: "나이", add: "주소" };
+			document.getElementById("print").innerHTML = "";
+			for(let i in member){
+				if(member[i] != null) document.getElementById("print").innerHTML += `${labels[i]} : ${member[i]}<br/>`;
+			}
+		}
+	</script>
 </body>
 </html>
