--- a/web/workspace/javascript/test/test04/test4.html
+++ b/web/workspace/javascript/test/test04/test4.html
@@ -49,13 +49,12 @@
 					document.getElementById("remove").value = "";
 				}else{
 					alert("삭제할 음식이 없습니다.")
+					document.getElementById("remove").value = "";
 					return;
 				}
 			}
 			document.getElementById("print4").innerHTML = result.join(" ");
 		}
 	</script>
-	
-	
 </body>
 </html>
