--- a/web/workspace/javascript/test/test04/test6.html
+++ b/web/workspace/javascript/test/test04/test6.html
@@ -37,15 +37,14 @@
 			member.name = prompt("이름 입력", "홍길동");
 			member.age = prompt("나이 입력", "29") + "세";
 			member.add = prompt("주소 입력", "서울시");
-			if(member.name == null || member.age == null || member.add == null){
+			if(member.name == null || member.age == null+"세" || member.add == null){
 				alert("다시 입력 부탁드립니다.");
 				return;
 			}
-			return member;
 		}
 
 		function printMember(){
-			if(member.name == null || member.age == null || member.add == null){
+			if(member.name == null || member.age == null+"세" || member.add == null){
 				alert("입력을 먼저 부탁드립니다.");
 				return;
 			}
@@ -53,7 +52,7 @@
 			const labels = { name: "이름", age: "나이", add: "주소" };
 			document.getElementById("print").innerHTML = "";
 			for(let i in member){
-				if(member[i] != null) document.getElementById("print").innerHTML += `${labels[i]} : ${member[i]}<br/>`;
+				if(member[i] !== null) document.getElementById("print").innerHTML += `${labels[i]} : ${member[i]}<br/>`;
 			}
 		}
 	</script>
