--- a/web/workspace/javascript/ex24_baseballgame.html
+++ b/web/workspace/javascript/ex24_baseballgame.html
@@ -63,7 +63,7 @@
                     // <img width="100",height="100" border="1" />
                     
                     // #card 안에 img 요소추가
-                    document.querySelector("#card").append(img);
+                    document.querySelector("#card").appendChild(img);
                 }
 
                 // 입력버튼 이벤트 등록
