--- a/web/workspace/javascript/test/test06/test2.html
+++ b/web/workspace/javascript/test/test06/test2.html
@@ -14,17 +14,18 @@
         <img src="../20250326/img/apple.gif" width="100" height="100" id="img">
     </div>
     <script>
-        let img = document.querySelector(".img-container > img");
-        let imgWidth = img.width;
-        let imgHeight = img.height;
+        let img = document.getElementById("img");
         img.src = `banana.jpg`;
 
-        img.onclick = function(){
-            imgWidth += 10;
-            imgHeight += 10;
-            img.setAttribute("width", imgWidth);
-            img.setAttribute("height", imgHeight);
-        }
+        img.addEventListener("click", () => {
+            let currentWidth = img.clientWidth;  // 현재 가로 크기
+            let currentHeight = img.clientHeight; // 현재 세로 크기
+        
+            img.style.width = (currentWidth + 10) + "px";  // 가로 10px 증가
+            img.style.height = (currentHeight + 10) + "px"; // 세로 10px 증가
+        
+            img.style.transition = "width 0.2s ease-in-out, height 0.2s ease-in-out"; // 부드러운 애니메이션 적용
+        });
     </script>
 </body>
 </html>
