--- a/web/workspace/javascript/test/test06/test6.html
+++ b/web/workspace/javascript/test/test06/test6.html
@@ -12,7 +12,11 @@
     </h2>
     <input type="text" class="input-data" onkeyup="test12();">
     <div id="text-container"></div>
-
-
+    <script>
+        function test12(){
+            let result = document.querySelector(".input-data").value;
+            document.getElementById("text-container").innerHTML = `글자 : ${result}<br/> 글자수 : ${result.length}`;
+        }
+    </script>
 </body>
 </html>
