[JAVA-70] jQuery_요소선택
jQuery_요소선택

--- a/web/workspace/javascript/test/test06/test4.html
+++ b/web/workspace/javascript/test/test06/test4.html
@@ -19,7 +19,8 @@
             let result = "";
 
             let Member = {name:"홍길동", age:23, height:163.5, weight:50.7, addr:"서울시 구로구", birthDay:"2000/09/18"};
-            
+            // Member : 객체
+            // Member["name"] → 홍길동
             for(let i in Member){
                 result += `<li>${i} : ${Member[i]}</li>`;
             }
