--- a/web/workspace/jquery/ex01_개요.html
+++ b/web/workspace/jquery/ex01_개요.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ㅏㅐ">
+<html lang="ko">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,8 +54,8 @@
             /*
             jQuery 방식은 3가지 구문을 제공함
             1) jQuery(document).ready(function(){ 실행내용 }
-            2)  $(document).ready(function(){ 실행내용 }
-            3)  $(function(){ 실행내용 }
+            2) $(document).ready(function(){ 실행내용 }
+            3) $(function(){ 실행내용 }
 
             - 여러번 기술된 경우 순서대로 실행됨.
             - 해당 문서의 요소들이 모두 로드 된 경우 바로 실행됨
