--- a/web/workspace/jquery/test01/test2.html
+++ b/web/workspace/jquery/test01/test2.html
@@ -16,7 +16,12 @@
 		</select>
 		<script>
 			$(function(){
-				setTimeout(() => alert($("#sel").val()),3000);
+				setTimeout(() => {
+					alert($("#sel").val());
+				},3000);
+				// setTimeout(function(){
+				// 	alert($("#sel").val());
+				// }, 3000)
 			})
 		</script>
 	</body>
