--- a/web/workspace/jquery/test01/test1.html
+++ b/web/workspace/jquery/test01/test1.html
@@ -27,12 +27,10 @@
             $(function(){
                 $("h1").first().css("color","red");
                 $("h1").odd().css("color","red");
-                $("p").css("color","blue")
-                $("h1 > p").css("color","blue");
+                $("h1 > p, p").css("color","blue");
                 $("h1.item").css("color","green");
                 $("h1#selected").css("color","orange");
                 $("h2, h3").css("color","pink")
-
             })
         </script>
     </body>
