[JAVA-71] 이벤트,each
이벤트,each

--- a/web/workspace/jquery/test01/test6.html
+++ b/web/workspace/jquery/test01/test6.html
@@ -39,7 +39,7 @@
 	<button onclick="sizeChange(200);">200x200</button>
 	<script>
 		function sizeChange(e){
-			$("#div2").css({width:e+"px", height:e+"px"})
+			$("#div2").css({width : e, height : e})
 		}
 	</script>
 </body>
